# launchline

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
public/: index.html  jszip.min.js
scripts/: bootstrap.ps1  check-runtime.cjs  dev.ps1  generate-source-snippets.cjs  pymupdf_server.py  settings.json
scripts/etl/: datasets.py  execute.py  generate_data.py  glossary.json  incidents.json  issues.json  pipeline.py  requirements.txt  settings.json  setup_venv.py
src/: App.jsx  index.jsx  main.js  preload.js
src/app-shell/: AppShell.jsx  navVariants.js
src/components/: Modal.jsx  Skeleton.jsx  StatCard.jsx  TabBar.jsx  WorkspaceBanner.jsx
src/data/: businessRules.js  dataDictionary.js  glossary.js  llmModelCatalogs.js  termStats.js
src/hooks/: useSettings.js
src/pages/: AccessControlPage.jsx  AuditLoggingPage.jsx  CICDPage.jsx  ContainerizationPage.jsx  DataVersioningPage.jsx  DisasterRecoveryPage.jsx  LLMOperationsPage.jsx  ModelRegistryPage.jsx  MonitoringPage.jsx  ProductionPage.jsx  PythonTools.jsx  SecretsPage.jsx
src/pages/production/: AccessControlTab.jsx  AuditLoggingTab.jsx  CICDTab.jsx  ContainerizationTab.jsx  DataVersioningTab.jsx  DisasterRecoveryTab.jsx  LLMOperationsTab.jsx  LLMProviderControls.jsx  ModelRegistryTab.jsx  MonitoringTab.jsx
src/python/: packageCatalogUtils.js  pagePythonManifests.js  venvRecommendationEngine.js
src/shared/: jsonStorage.js  settingsSchema.js
src/styles/: theme.css
src/ui-kit/feedback/: SaveBar.jsx
tests/: jsonStorage.test.cjs  settingsSchema.test.cjs
(+4 files in other folders)
